--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
 <h1>This is the home page</h1>
 <p> Hola maricon</p>
+
+<%= link_to 'Articles Listing', articles_path %>
+<%= link_to 'About', about_path %>
