--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Edit an Article</h1>
+    <h1 class = "text-center mt-4">Edit an Article</h1>
+    <%= render 'form' %>
 
-<%= render 'form' %>
 
-
-<%= link_to 'Cancel and Return to Articles Listing', articles_path %>
